portal/src/main/java/org/mskcc/cbio/portal/oncoPrintSpecLanguage/completeOncoPrintSpecASTParser.java
/** Copyright (c) 2012 Memorial Sloan-Kettering Cancer Center.
**
** This library is free software; you can redistribute it and/or modify it
** under the terms of the GNU Lesser General Public License as published
** by the Free Software Foundation; either version 2.1 of the License, or
** any later version.
**
** This library is distributed in the hope that it will be useful, but
** WITHOUT ANY WARRANTY, WITHOUT EVEN THE IMPLIED WARRANTY OF
** MERCHANTABILITY OR FITNESS FOR A PARTICULAR PURPOSE.  The software and
** documentation provided hereunder is on an "as is" basis, and
** Memorial Sloan-Kettering Cancer Center 
** has no obligations to provide maintenance, support,
** updates, enhancements or modifications.  In no event shall
** Memorial Sloan-Kettering Cancer Center
** be liable to any party for direct, indirect, special,
** incidental or consequential damages, including lost profits, arising
** out of the use of this software and its documentation, even if
** Memorial Sloan-Kettering Cancer Center 
** has been advised of the possibility of such damage.  See
** the GNU Lesser General Public License for more details.
**
** You should have received a copy of the GNU Lesser General Public License
** along with this library; if not, write to the Free Software Foundation,
** Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
**/

// $ANTLR 3.2 Sep 23, 2009 12:02:23 ../completeOncoPrintSpecAST.g 2010-12-14 17:00:18
 
	package org.mskcc.cbio.portal.oncoPrintSpecLanguage;
	import java.util.ArrayList; 
	import org.mskcc.cbio.portal.oncoPrintSpecLanguage.*;
	import static java.lang.System.out;
	import java.io.PrintStream;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class completeOncoPrintSpecASTParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "STRING", "UserGeneList", "ID", "IndividualGene", "DefaultDataTypeSpec", "DataTypeOrLevel", "COMPARISON_OP", "SIGNED_INT", "DiscreteDataType", "SIGNED_FLOAT", "ContinuousDataTypeInequality", "INT", "WS", "ESC_SEQ", "UNICODE_ESC", "OCTAL_ESC", "HEX_DIGIT", "'{'", "'}'", "'DATATYPES'", "':'", "';'"
    };
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int UserGeneList=5;
    public static final int T__21=21;
    public static final int COMPARISON_OP=10;
    public static final int UNICODE_ESC=18;
    public static final int OCTAL_ESC=19;
    public static final int HEX_DIGIT=20;
    public static final int INT=15;
    public static final int ID=6;
    public static final int EOF=-1;
    public static final int DiscreteDataType=12;
    public static final int ContinuousDataTypeInequality=14;
    public static final int SIGNED_INT=11;
    public static final int ESC_SEQ=17;
    public static final int WS=16;
    public static final int IndividualGene=7;
    public static final int DefaultDataTypeSpec=8;
    public static final int DataTypeOrLevel=9;
    public static final int SIGNED_FLOAT=13;
    public static final int STRING=4;

    // delegates
    // delegators


        public completeOncoPrintSpecASTParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public completeOncoPrintSpecASTParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return completeOncoPrintSpecASTParser.tokenNames; }
    public String getGrammarFileName() { return "../completeOncoPrintSpecAST.g"; }


    	/*
    	DAMN, won't work; this returns only an AST, and we don't want to throw exceptions because then the parse won't complete
    	
    	Error handling strategy: We serve two purposes, 
    	1) when calling the root production, oncoPrintSpecification, return a list of all errors, each a String;
    		similarly for the tree grammar; thus if syntax error(s) occur, the driver program gets all of them, and doesn't call the 
    		tree parser; and if semantics error(s) occur, the driver will get all of them
    	2) when calling any other production, as for unit testing, throw an RecognitionException
    	Implementation:
    	a) in reportError, determine whether we're in case 1 or 2, and collect or throw accordingly
    	b) in the root production if errors have been thrown, rethrow the list 
    	*/

    	// get a list to hold errors
    // TODO: HIGH: UNIT TEST in OncoSpec
    	ArrayList<String> errorMessages = new ArrayList<String>(); // APG: TMP FIX: Utilities.getErrorMessages();

    	// override to make comprehensible errors for users
       public void reportError(RecognitionException e){
              // if we've already reported an error and have not matched a token
              // yet successfully, don't report any errors.
              if ( state.errorRecovery ) {
                      //System.err.print("[SPURIOUS] ");
                      return;
              }
              state.syntaxErrors++; // don't count spurious
              state.errorRecovery = true;
    			 displayRecognitionError(this.getTokenNames(), e);
       }

       public void displayRecognitionError(String[] tokenNames, RecognitionException e) {
    	//      String hdr = getErrorHeader(e);
    		int normalPos = e.charPositionInLine + 1;
    		String hdr = "Syntax error at char " + normalPos + " of line "+e.line+": ";
          String msg = getErrorMessage(e, tokenNames);
          // TODO: change this to print to a tmp file
          // get ASTparser to write errors to a PrintStream, connected to a file
    		// System.err.println( hdr + msg);
          errorMessages.add( hdr + msg );
       }

       public String getErrorMessage(RecognitionException e, String[] tokenNames) {
          String msg = e.getMessage();
    		// emitErrorMessage( "APG received " + e.getClass().getName() + " with token " + e.token.getText() );
          
          if (e instanceof UnwantedTokenException) {
             UnwantedTokenException ute = (UnwantedTokenException) e;
             String tokenName = "<unknown>";
             if (ute.expecting == Token.EOF) {
                tokenName = "EOF";
             } else {
                tokenName = tokenNames[ute.expecting];
             }
             msg = "extraneous input " + getTokenErrorDisplay(ute.getUnexpectedToken()) + " expecting "
                   + tokenName;
          } else if (e instanceof MissingTokenException) {
             MissingTokenException mte = (MissingTokenException) e;
             String tokenName = "<unknown>";
             if (mte.expecting == Token.EOF) {
                tokenName = "EOF";
             } else {
                tokenName = tokenNames[mte.expecting];
             }
             msg = "missing " + tokenName + " at " + getTokenErrorDisplay(e.token);
          } else if (e instanceof MismatchedTokenException) {
             MismatchedTokenException mte = (MismatchedTokenException) e;
             String tokenName = "<unknown>";
             if (mte.expecting == Token.EOF) {
                tokenName = "EOF";
             } else {
                tokenName = tokenNames[mte.expecting];
             }
             msg = "mismatched input " + getTokenErrorDisplay(e.token) + " expecting " + tokenName;
          } else if (e instanceof MismatchedTreeNodeException) {
             MismatchedTreeNodeException mtne = (MismatchedTreeNodeException) e;
             String tokenName = "<unknown>";
             if (mtne.expecting == Token.EOF) {
                tokenName = "EOF";
             } else {
                tokenName = tokenNames[mtne.expecting];
             }
             msg = "mismatched tree node: " + mtne.node + " expecting " + tokenName;
          } else if (e instanceof NoViableAltException) {
             // NoViableAltException nvae = (NoViableAltException)e;
             // for development, can add
             // "decision=<<"+nvae.grammarDecisionDescription+">>"
             // and "(decision="+nvae.decisionNumber+") and
             // "state "+nvae.stateNumber
             msg = "Syntax error at " + getTokenErrorDisplay(e.token);
          } else if (e instanceof EarlyExitException) {
             // EarlyExitException eee = (EarlyExitException)e;
             // for development, can add "(decision="+eee.decisionNumber+")"
             // TODO: better error message
             msg = "found empty list at "  // "required (...)+ loop did not match anything at input "
                   + getTokenErrorDisplay(e.token);
          } else if (e instanceof MismatchedSetException) {
             MismatchedSetException mse = (MismatchedSetException) e;
             msg = "mismatched input " + getTokenErrorDisplay(e.token) + "."; // + " expecting set " + mse.expecting;
          } else if (e instanceof MismatchedNotSetException) {
             MismatchedNotSetException mse = (MismatchedNotSetException) e;
             msg = "mismatched input " + getTokenErrorDisplay(e.token) + "."; // + " expecting set " + mse.expecting;
          } else if (e instanceof FailedPredicateException) {
             FailedPredicateException fpe = (FailedPredicateException) e;
    			// msg = "rule " + fpe.ruleName + " failed predicate: {" + fpe.predicateText + "}?";
    			// msg = "token '" + e.token.getText() + "' is not a valid '" + lookupDataTypeName( fpe.ruleName ) +"'.";
          }
          return msg;
       }


    public static class oncoPrintSpecification_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "oncoPrintSpecification"
    // ../completeOncoPrintSpecAST.g:126:1: oncoPrintSpecification : ( userGeneList )+ -> ( userGeneList )+ ;
    public final completeOncoPrintSpecASTParser.oncoPrintSpecification_return oncoPrintSpecification() throws RecognitionException {
       // for debugging   System.err.println( "at " + Thread.currentThread().getStackTrace()[1].getFileName() + ":" + Thread.currentThread().getStackTrace()[1].getLineNumber());
        completeOncoPrintSpecASTParser.oncoPrintSpecification_return retval = new completeOncoPrintSpecASTParser.oncoPrintSpecification_return();
        // for debugging   System.err.println( "at " + Thread.currentThread().getStackTrace()[1].getFileName() + ":" + Thread.currentThread().getStackTrace()[1].getLineNumber());
        retval.start = input.LT(1);
        // for debugging   System.err.println( "at " + Thread.currentThread().getStackTrace()[1].getFileName() + ":" + Thread.currentThread().getStackTrace()[1].getLineNumber());

        Object root_0 = null;

        completeOncoPrintSpecASTParser.userGeneList_return userGeneList1 = null;

        // for debugging   System.err.println( "at " + Thread.currentThread().getStackTrace()[1].getFileName() + ":" + Thread.currentThread().getStackTrace()[1].getLineNumber());

        RewriteRuleSubtreeStream stream_userGeneList=new RewriteRuleSubtreeStream(adaptor,"rule userGeneList");
        try {
            // ../completeOncoPrintSpecAST.g:127:2: ( ( userGeneList )+ -> ( userGeneList )+ )
            // ../completeOncoPrintSpecAST.g:128:2: ( userGeneList )+
            {
            // ../completeOncoPrintSpecAST.g:128:2: ( userGeneList )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==STRING||LA1_0==ID||LA1_0==21||LA1_0==23) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // ../completeOncoPrintSpecAST.g:128:4: userGeneList
            	    {
            	    pushFollow(FOLLOW_userGeneList_in_oncoPrintSpecification45);
            	    userGeneList1=userGeneList();

            	    state._fsp--;

            	    stream_userGeneList.add(userGeneList1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);



            // AST REWRITE
            // elements: userGeneList
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 128:20: -> ( userGeneList )+
            {
                if ( !(stream_userGeneList.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_userGeneList.hasNext() ) {
                    adaptor.addChild(root_0, stream_userGeneList.nextTree());

                }
                stream_userGeneList.reset();

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "oncoPrintSpecification"

    public static class userGeneList_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "userGeneList"
    // ../completeOncoPrintSpecAST.g:131:1: userGeneList : ( geneList | ( '{' geneList '}' | STRING '{' geneList '}' ) -> ^( UserGeneList geneList ( STRING )? ) );
    public final completeOncoPrintSpecASTParser.userGeneList_return userGeneList() throws RecognitionException {
        completeOncoPrintSpecASTParser.userGeneList_return retval = new completeOncoPrintSpecASTParser.userGeneList_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal3=null;
        Token char_literal5=null;
        Token STRING6=null;
        Token char_literal7=null;
        Token char_literal9=null;
        completeOncoPrintSpecASTParser.geneList_return geneList2 = null;

        completeOncoPrintSpecASTParser.geneList_return geneList4 = null;

        completeOncoPrintSpecASTParser.geneList_return geneList8 = null;


        Object char_literal3_tree=null;
        Object char_literal5_tree=null;
        Object STRING6_tree=null;
        Object char_literal7_tree=null;
        Object char_literal9_tree=null;
        RewriteRuleTokenStream stream_21=new RewriteRuleTokenStream(adaptor,"token 21");
        RewriteRuleTokenStream stream_22=new RewriteRuleTokenStream(adaptor,"token 22");
        RewriteRuleTokenStream stream_STRING=new RewriteRuleTokenStream(adaptor,"token STRING");
        RewriteRuleSubtreeStream stream_geneList=new RewriteRuleSubtreeStream(adaptor,"rule geneList");
        try {
            // ../completeOncoPrintSpecAST.g:132:2: ( geneList | ( '{' geneList '}' | STRING '{' geneList '}' ) -> ^( UserGeneList geneList ( STRING )? ) )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==ID||LA3_0==23) ) {
                alt3=1;
            }
            else if ( (LA3_0==STRING||LA3_0==21) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // ../completeOncoPrintSpecAST.g:133:2: geneList
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_geneList_in_userGeneList65);
                    geneList2=geneList();

                    state._fsp--;

                    adaptor.addChild(root_0, geneList2.getTree());

                    }
                    break;
                case 2 :
                    // ../completeOncoPrintSpecAST.g:135:2: ( '{' geneList '}' | STRING '{' geneList '}' )
                    {
                    // ../completeOncoPrintSpecAST.g:135:2: ( '{' geneList '}' | STRING '{' geneList '}' )
                    int alt2=2;
                    int LA2_0 = input.LA(1);

                    if ( (LA2_0==21) ) {
                        alt2=1;
                    }
                    else if ( (LA2_0==STRING) ) {
                        alt2=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 2, 0, input);

                        throw nvae;
                    }
                    switch (alt2) {
                        case 1 :
                            // ../completeOncoPrintSpecAST.g:135:4: '{' geneList '}'
                            {
                            char_literal3=(Token)match(input,21,FOLLOW_21_in_userGeneList75);  
                            stream_21.add(char_literal3);

                            pushFollow(FOLLOW_geneList_in_userGeneList77);
                            geneList4=geneList();

                            state._fsp--;

                            stream_geneList.add(geneList4.getTree());
                            char_literal5=(Token)match(input,22,FOLLOW_22_in_userGeneList79);  
                            stream_22.add(char_literal5);


                            }
                            break;
                        case 2 :
                            // ../completeOncoPrintSpecAST.g:136:4: STRING '{' geneList '}'
                            {
                            STRING6=(Token)match(input,STRING,FOLLOW_STRING_in_userGeneList85);  
                            stream_STRING.add(STRING6);

                            char_literal7=(Token)match(input,21,FOLLOW_21_in_userGeneList87);  
                            stream_21.add(char_literal7);

                            pushFollow(FOLLOW_geneList_in_userGeneList89);
                            geneList8=geneList();

                            state._fsp--;

                            stream_geneList.add(geneList8.getTree());
                            char_literal9=(Token)match(input,22,FOLLOW_22_in_userGeneList91);  
                            stream_22.add(char_literal9);


                            }
                            break;

                    }



                    // AST REWRITE
                    // elements: STRING, geneList
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 136:30: -> ^( UserGeneList geneList ( STRING )? )
                    {
                        // ../completeOncoPrintSpecAST.g:136:33: ^( UserGeneList geneList ( STRING )? )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(UserGeneList, "UserGeneList"), root_1);

                        adaptor.addChild(root_1, stream_geneList.nextTree());
                        // ../completeOncoPrintSpecAST.g:136:57: ( STRING )?
                        if ( stream_STRING.hasNext() ) {
                            adaptor.addChild(root_1, stream_STRING.nextNode());

                        }
                        stream_STRING.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "userGeneList"

    public static class geneList_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "geneList"
    // ../completeOncoPrintSpecAST.g:141:1: geneList : ( individualGene | defaultDataTypeSpec )+ ;
    public final completeOncoPrintSpecASTParser.geneList_return geneList() throws RecognitionException {
        completeOncoPrintSpecASTParser.geneList_return retval = new completeOncoPrintSpecASTParser.geneList_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        completeOncoPrintSpecASTParser.individualGene_return individualGene10 = null;

        completeOncoPrintSpecASTParser.defaultDataTypeSpec_return defaultDataTypeSpec11 = null;



        try {
            // ../completeOncoPrintSpecAST.g:142:2: ( ( individualGene | defaultDataTypeSpec )+ )
            // ../completeOncoPrintSpecAST.g:146:2: ( individualGene | defaultDataTypeSpec )+
            {
            root_0 = (Object)adaptor.nil();

            // ../completeOncoPrintSpecAST.g:146:2: ( individualGene | defaultDataTypeSpec )+
            int cnt4=0;
            loop4:
            do {
                int alt4=3;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==ID) ) {
                    alt4=1;
                }
                else if ( (LA4_0==23) ) {
                    alt4=2;
                }


                switch (alt4) {
            	case 1 :
            	    // ../completeOncoPrintSpecAST.g:146:4: individualGene
            	    {
            	    pushFollow(FOLLOW_individualGene_in_geneList135);
            	    individualGene10=individualGene();

            	    state._fsp--;

            	    adaptor.addChild(root_0, individualGene10.getTree());

            	    }
            	    break;
            	case 2 :
            	    // ../completeOncoPrintSpecAST.g:146:21: defaultDataTypeSpec
            	    {
            	    pushFollow(FOLLOW_defaultDataTypeSpec_in_geneList139);
            	    defaultDataTypeSpec11=defaultDataTypeSpec();

            	    state._fsp--;

            	    adaptor.addChild(root_0, defaultDataTypeSpec11.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt4 >= 1 ) break loop4;
                        EarlyExitException eee =
                            new EarlyExitException(4, input);
                        throw eee;
                }
                cnt4++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "geneList"

    public static class individualGene_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "individualGene"
    // ../completeOncoPrintSpecAST.g:150:1: individualGene : ID ( fullDataTypeSpec )? -> ^( IndividualGene ID ( fullDataTypeSpec )? ) ;
    public final completeOncoPrintSpecASTParser.individualGene_return individualGene() throws RecognitionException {
        completeOncoPrintSpecASTParser.individualGene_return retval = new completeOncoPrintSpecASTParser.individualGene_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ID12=null;
        completeOncoPrintSpecASTParser.fullDataTypeSpec_return fullDataTypeSpec13 = null;


        Object ID12_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_fullDataTypeSpec=new RewriteRuleSubtreeStream(adaptor,"rule fullDataTypeSpec");
        try {
            // ../completeOncoPrintSpecAST.g:151:2: ( ID ( fullDataTypeSpec )? -> ^( IndividualGene ID ( fullDataTypeSpec )? ) )
            // ../completeOncoPrintSpecAST.g:152:2: ID ( fullDataTypeSpec )?
            {
            ID12=(Token)match(input,ID,FOLLOW_ID_in_individualGene155);  
            stream_ID.add(ID12);

            // ../completeOncoPrintSpecAST.g:152:5: ( fullDataTypeSpec )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==24) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // ../completeOncoPrintSpecAST.g:152:5: fullDataTypeSpec
                    {
                    pushFollow(FOLLOW_fullDataTypeSpec_in_individualGene157);
                    fullDataTypeSpec13=fullDataTypeSpec();

                    state._fsp--;

                    stream_fullDataTypeSpec.add(fullDataTypeSpec13.getTree());

                    }
                    break;

            }



            // AST REWRITE
            // elements: ID, fullDataTypeSpec
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 152:23: -> ^( IndividualGene ID ( fullDataTypeSpec )? )
            {
                // ../completeOncoPrintSpecAST.g:152:26: ^( IndividualGene ID ( fullDataTypeSpec )? )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(IndividualGene, "IndividualGene"), root_1);

                adaptor.addChild(root_1, stream_ID.nextNode());
                // ../completeOncoPrintSpecAST.g:152:46: ( fullDataTypeSpec )?
                if ( stream_fullDataTypeSpec.hasNext() ) {
                    adaptor.addChild(root_1, stream_fullDataTypeSpec.nextTree());

                }
                stream_fullDataTypeSpec.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);
